# flask_mongo_scaffold

./: .env.example  README.md  app.py  docker-compose.yml  pyproject.toml  requirements.txt
app/: __init__.py  db.py
app/animals/: controller.py  model.py
app/farmers/: farmers.py
