[tool.poetry]
name = "flask_mongo_scaffold"
version = "0.1.0"
description = "Flask+Mongo scaffold"
authors = ["Vincent <vncnttejas@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.1.3"
pymongo = "^4.2.0"
Flask-PyMongo = "^2.3.0"
pydantic = "^1.9.1"
python-dotenv = "^0.20.0"
dnspython = "^2.2.1"

[tool.poetry.dev-dependencies]
autopep8 = "^1.6.0"
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
